Fix static website generation script [skip ci]

--- a/src/Notes/DataScience/(DS0001)_MLStanfordCoursera/Clustering.html
+++ b/src/Notes/DataScience/(DS0001)_MLStanfordCoursera/Clustering.html
@@ -166,7 +166,7 @@ Se elige el ofrece una mayor mejora con respecto a un número de clústers menor
 
 </li></ol>
 <p>
-<img src="/home/alba/Documents/repos/NoteWorld/VimWiki/public/assets/elbow_method.png" alt="Método del codo" style="transform:translate(22vw,0)">
+<img src="https://albamr09.github.io/assets/elbow_method.png" alt="Método del codo" style="transform:translate(22vw,0)">
 </p>
 </div>
   
