--- a/src/Notes/DataScience/(DS0001)_MLStanfordCoursera/SVM/Optimal Margin Classifier.html
+++ b/src/Notes/DataScience/(DS0001)_MLStanfordCoursera/SVM/Optimal Margin Classifier.html
@@ -150,7 +150,7 @@ Given any decision boundary, the vector \(w\) is always orthogonal to the decisi
 
 </li></ul>
 <p>
-<img src="/home/alba/Documents/repos/NoteWorld/VimWiki/public/assets/distance_geometric_margin.png" alt="w is orthogonal to the decision boundary" style="transform:translate(22vw,0);">
+<img src="https://albamr09.github.io/assets/distance_geometric_margin.png" alt="w is orthogonal to the decision boundary" style="transform:translate(22vw,0);">
 </p>
 
 <hr>
