--- a/src/Notes/DataScience/(DS0002)_AIRobotics/SLAM/SLAM.html
+++ b/src/Notes/DataScience/(DS0002)_AIRobotics/SLAM/SLAM.html
@@ -68,7 +68,7 @@ Suppose we have a robot that has followed the following path:
 </p>
 
 <p>
-<img src="/home/alba/Documents/repos/NoteWorld/VimWiki/public/assets/robot_path.png" alt="Robot Path" style="transform: translate(50%, 0)">
+<img src="https://albamr09.github.io/assets/robot_path.png" alt="Robot Path" style="transform: translate(50%, 0)">
 </p>
 
 <p>
@@ -87,7 +87,7 @@ Relative measurement constraints: these are the segment between each position ve
 
 </li></ul>
 <p>
-<img src="/home/alba/Documents/repos/NoteWorld/VimWiki/public/assets/graph_slam_constraints.png" alt="Graph SLAM Constraints" style="transform: translate(50%, 0)">
+<img src="https://albamr09.github.io/assets/graph_slam_constraints.png" alt="Graph SLAM Constraints" style="transform: translate(50%, 0)">
 </p>
 
 <p>
@@ -270,7 +270,7 @@ Given the following motion:
 </p>
 
 <p>
-<img src="/home/alba/Documents/repos/NoteWorld/VimWiki/public/assets/motion_measurement_noise.png" alt="Motion and Measurement with Noise" style="transform: translate(50%, 0)">
+<img src="https://albamr09.github.io/assets/motion_measurement_noise.png" alt="Motion and Measurement with Noise" style="transform: translate(50%, 0)">
 </p>
 
 <p>
