--- a/src/Notes/DataScience/(DS0003)_Online_Training_Mobile_Robotics/BayesFilter/Bayes Filter.html
+++ b/src/Notes/DataScience/(DS0003)_Online_Training_Mobile_Robotics/BayesFilter/Bayes Filter.html
@@ -102,7 +102,7 @@ We start with no knowledge of the environment, so our state is described by a un
 </p>
 
 <p>
-<img src="/home/alba/Documents/repos/NoteWorld/VimWiki/public/assets/belief.png" alt="Initial Belief">
+<img src="https://albamr09.github.io/assets/belief.png" alt="Initial Belief">
 </p>
 
 <p>
@@ -110,7 +110,7 @@ After receiving a measurement \(z\), we update our belief. In this case we have 
 </p>
 
 <p>
-<img src="/home/alba/Documents/repos/NoteWorld/VimWiki/public/assets/belief_after_measurement.png" alt="Belief After Measurement">
+<img src="https://albamr09.github.io/assets/belief_after_measurement.png" alt="Belief After Measurement">
 </p>
 
 <p>
@@ -118,7 +118,7 @@ Now we move forward, so we also have to shift our belief forward. Note, however,
 </p>
 
 <p>
-<img src="/home/alba/Documents/repos/NoteWorld/VimWiki/public/assets/belief_after_motion.png" alt="Belief After Motion">
+<img src="https://albamr09.github.io/assets/belief_after_motion.png" alt="Belief After Motion">
 </p>
 
 <p>
@@ -126,7 +126,7 @@ We receive yet another measurement \(z\), again we have that \(p(z|x)\) is large
 </p>
 
 <p>
-<img src="/home/alba/Documents/repos/NoteWorld/VimWiki/public/assets/belief_after_second_measurement.png" alt="Belief After Second Measurement">
+<img src="https://albamr09.github.io/assets/belief_after_second_measurement.png" alt="Belief After Second Measurement">
 </p>
 
 <div id="Bayes Filter-Recursive Bayes Filter-Derivation"><h3 id="Derivation" class="header"><a href="#Bayes Filter-Recursive Bayes Filter-Derivation">Derivation</a></h3></div>
@@ -294,7 +294,7 @@ Given a current state \(x_t\), the motion model could look like:
 </p>
 
 <p>
-<img src="/home/alba/Documents/repos/NoteWorld/VimWiki/public/assets/example_motion_model.png" alt="Example of Motion model">
+<img src="https://albamr09.github.io/assets/example_motion_model.png" alt="Example of Motion model">
 </p>
 
 <p>
@@ -312,7 +312,7 @@ Suppose we have a sensor that tell us the distance between us and the closest ob
 </p>
 
 <p>
-<img src="/home/alba/Documents/repos/NoteWorld/VimWiki/public/assets/example_measurement_model.png" alt="Example of Measurement model">
+<img src="https://albamr09.github.io/assets/example_measurement_model.png" alt="Example of Measurement model">
 </p>
 
 <p>
