--- a/src/Notes/DataScience/GoogleDataAnalyst/03. Prepare/Working with databases.html
+++ b/src/Notes/DataScience/GoogleDataAnalyst/03. Prepare/Working with databases.html
@@ -43,7 +43,7 @@ A <span id="Working with Databases-primary key"></span><strong id="primary key">
 </p>
 
 <p>
-<img src="/home/alba/Documents/repos/NoteWorld/VimWiki/public/assets/relational_database.png" alt="Relation Database" style="width:800px;height:400px;">
+<img src="https://albamr09.github.io/assets/relational_database.png" alt="Relation Database" style="width:800px;height:400px;">
 </p>
 
 <p>
