--- a/src/Notes/Math/Pre-Calculus/AGAAT/06_02.html
+++ b/src/Notes/Math/Pre-Calculus/AGAAT/06_02.html
@@ -49,7 +49,7 @@ Considering the possible intersections of the planes representing three equation
 </p>
 
 <p>
-<img src="/home/alba/Documents/repos/NoteWorld/VimWiki/public/assets/three_var_system_solutions.png" alt="Three Variable Linear System Solution" style="width:500px;height:350px">
+<img src="https://albamr09.github.io/assets/three_var_system_solutions.png" alt="Three Variable Linear System Solution" style="width:500px;height:350px">
 </p>
 
 <p>
