--- a/src/Notes/Math/Pre-Calculus/AGAAT/06_07.html
+++ b/src/Notes/Math/Pre-Calculus/AGAAT/06_07.html
@@ -83,7 +83,7 @@ Since \(y\) is greater than \(-\frac{1}{4}x + 1\), the graph of the solution set
 
 </li></ul>
 <p>
-<img src="/home/alba/Documents/repos/NoteWorld/VimWiki/public/assets/plot_linear_inequality.png" alt="Linear Inequality Plot" style="width:500px;height:350px">
+<img src="https://albamr09.github.io/assets/plot_linear_inequality.png" alt="Linear Inequality Plot" style="width:500px;height:350px">
 </p>
 
 <div id="Systems of Inequalities and Linear Programming-Solving Linear Inequalities-Two Methods for Graphing an Inequality"><h3 id="Two Methods for Graphing an Inequality" class="header"><a href="#Systems of Inequalities and Linear Programming-Solving Linear Inequalities-Two Methods for Graphing an Inequality">Two Methods for Graphing an Inequality</a></h3></div>
@@ -119,7 +119,7 @@ The next figures show the graphs for both inequalities as well as the solution s
 </p>
 
 <p>
-<img src="/home/alba/Documents/repos/NoteWorld/VimWiki/public/assets/plot_linear_inequality_system.png" alt="Linear Inequality System Plot" style="width:500px;height:500px">
+<img src="https://albamr09.github.io/assets/plot_linear_inequality_system.png" alt="Linear Inequality System Plot" style="width:500px;height:500px">
 </p>
 
 <div id="Systems of Inequalities and Linear Programming-Linear Programming"><h2 id="Linear Programming" class="header"><a href="#Systems of Inequalities and Linear Programming-Linear Programming">Linear Programming</a></h2></div>
@@ -140,7 +140,7 @@ The <span id="Systems of Inequalities and Linear Programming-Linear Programming-
 
 </li></ul>
 <p>
-<img src="/home/alba/Documents/repos/NoteWorld/VimWiki/public/assets/region_feasible_solutions.png" alt="Region of feasible solutions" style="width:400px;height:500px">
+<img src="https://albamr09.github.io/assets/region_feasible_solutions.png" alt="Region of feasible solutions" style="width:400px;height:500px">
 </p>
 
 <div id="Systems of Inequalities and Linear Programming-Linear Programming-Fundamental Theorem of Linear Programming"><h3 id="Fundamental Theorem of Linear Programming" class="header"><a href="#Systems of Inequalities and Linear Programming-Linear Programming-Fundamental Theorem of Linear Programming">Fundamental Theorem of Linear Programming</a></h3></div>
