--- a/src/Notes/WebDev/React/Basics.html
+++ b/src/Notes/WebDev/React/Basics.html
@@ -67,7 +67,7 @@ So <code>Redux</code> is composed by:
 </p>
 
 <p>
-<img src="/home/alba/Documents/repos/NoteWorld/VimWiki/public/assets/redux_components.png" alt="Redux Components" style="width:400px;height:150px">
+<img src="https://albamr09.github.io/assets/redux_components.png" alt="Redux Components" style="width:400px;height:150px">
 </p>
 
 
@@ -84,7 +84,7 @@ We create an action object and dispatch it:
 </li></ul>
  
 <p>
-<img src="/home/alba/Documents/repos/NoteWorld/VimWiki/public/assets/redux_action_dispatch.png" alt="Action Dispatch" style="width:400px;height:180px">
+<img src="https://albamr09.github.io/assets/redux_action_dispatch.png" alt="Action Dispatch" style="width:400px;height:180px">
 </p>
 
 <ul>
@@ -93,7 +93,7 @@ The store forwards the action to the reducer:
 
 </li></ul>
 <p>
-<img src="/home/alba/Documents/repos/NoteWorld/VimWiki/public/assets/redux_action_forward.png" alt="Action Forward" style="width:400px;height:150px">
+<img src="https://albamr09.github.io/assets/redux_action_forward.png" alt="Action Forward" style="width:400px;height:150px">
 </p>
 
 <ul>
@@ -103,7 +103,7 @@ The reducer updates the state and returns it
 </li></ul>
  
 <p>
-<img src="/home/alba/Documents/repos/NoteWorld/VimWiki/public/assets/redux_reducer.png" alt="Reducer Update State" style="width:400px;height:150px">
+<img src="https://albamr09.github.io/assets/redux_reducer.png" alt="Reducer Update State" style="width:400px;height:150px">
 </p>
 
 <ul>
