--- a/src/Notes/WebDev/Spring/AOP/Overview.html
+++ b/src/Notes/WebDev/Spring/AOP/Overview.html
@@ -45,7 +45,7 @@ What AOP does behind the scenes is call methods from the classes/aspects (like a
 </p>
 
 <p>
-<img src="/home/alba/Documents/repos/NoteWorld/VimWiki/public/assets/aop_behind_scenes.png" alt="AOP Behind the Scenes" style="width:750px">
+<img src="https://albamr09.github.io/assets/aop_behind_scenes.png" alt="AOP Behind the Scenes" style="width:750px">
 </p>
 
 <div id="Overview-Advantages"><h2 id="Advantages" class="header"><a href="#Overview-Advantages">Advantages</a></h2></div>
