--- a/src/Notes/WebDev/Spring/Bean Scopes/Life Cycle.html
+++ b/src/Notes/WebDev/Spring/Bean Scopes/Life Cycle.html
@@ -41,7 +41,7 @@ The bean life cycle is as follows:
 </p>
 
 <p>
-<img src="/home/alba/Documents/repos/NoteWorld/VimWiki/public/assets/bean_life_cycle.png" alt="Bean Life Cycle" style="width:700px;heigh:500px;">
+<img src="https://albamr09.github.io/assets/bean_life_cycle.png" alt="Bean Life Cycle" style="width:700px;heigh:500px;">
 </p>
 
 <p>
