--- a/src/Notes/WebDev/Spring/Security/Authorization.html
+++ b/src/Notes/WebDev/Spring/Security/Authorization.html
@@ -41,7 +41,7 @@ In this section we are going to show how to restrict access based on roles. Our 
 </p>
 
 <p>
-<img src="/home/alba/Documents/repos/NoteWorld/VimWiki/public/assets/access_based_on_roles.png" alt="Access Based on Roles" style="width:700px">
+<img src="https://albamr09.github.io/assets/access_based_on_roles.png" alt="Access Based on Roles" style="width:700px">
 </p>
 
 <p>
