--- a/src/Notes/DataScience/(DS0001)_MLStanfordCoursera/ExpectationMaximization/Expectation-Maximization Algorithms.html
+++ b/src/Notes/DataScience/(DS0001)_MLStanfordCoursera/ExpectationMaximization/Expectation-Maximization Algorithms.html
@@ -122,7 +122,7 @@ For example, imagine you have the following dataset:
 </p>
 
 <p>
-<img src="/home/alba/Documents/repos/NoteWorld/VimWiki/public/assets/anomaly_detection_data.png" alt="Dataset for Anomaly Detection" style="transform:translate(22vw,0)">
+<img src="https://albamr09.github.io/assets/anomaly_detection_data.png" alt="Dataset for Anomaly Detection" style="transform:translate(22vw,0)">
 </p>
 
 <p>
@@ -130,7 +130,7 @@ It looks like the data comes from two different Gaussian distributions:
 </p>
 
 <p>
-<img src="/home/alba/Documents/repos/NoteWorld/VimWiki/public/assets/anomaly_detection_multivariate_gaussian.png" alt="Multivariate Gaussian Distribution" style="transform:translate(30vw,0)">
+<img src="https://albamr09.github.io/assets/anomaly_detection_multivariate_gaussian.png" alt="Multivariate Gaussian Distribution" style="transform:translate(30vw,0)">
 </p>
 
 <p>
@@ -206,7 +206,7 @@ For example, the following plot shows what a GMM derived from 3 mixture componen
 </p>
 
 <p>
-<img src="/home/alba/Documents/repos/NoteWorld/VimWiki/public/assets/gmm_example.png" alt="GMM Example" style="transform:translate(10vw,0)">
+<img src="https://albamr09.github.io/assets/gmm_example.png" alt="GMM Example" style="transform:translate(10vw,0)">
 </p>
 
 <p>
@@ -456,7 +456,7 @@ Given any convex function (the inverse also applies to concave functions), if we
 </p>
 
 <p>
-<img src="/home/alba/Documents/repos/NoteWorld/VimWiki/public/assets/jensen_inequality.svg" alt="Jensen's Inequality" style="transform:translate(22vw, 0)">
+<img src="https://albamr09.github.io/assets/jensen_inequality.svg" alt="Jensen's Inequality" style="transform:translate(22vw, 0)">
 </p>
 
 <div id="Expectation Maximization-Generalized EM Algorithm-Motivation"><h3 id="Motivation" class="header"><a href="#Expectation Maximization-Generalized EM Algorithm-Motivation">Motivation</a></h3></div>
@@ -492,7 +492,7 @@ On the first iteration, the graph would be as follows:
 </p>
 
 <p>
-<img src="/home/alba/Documents/repos/NoteWorld/VimWiki/public/assets/e_step_1.svg" alt="First iteration E-Step">
+<img src="https://albamr09.github.io/assets/e_step_1.svg" alt="First iteration E-Step">
 </p>
 
 <p>
@@ -500,7 +500,7 @@ And on the second iteration:
 </p>
 
 <p>
-<img src="/home/alba/Documents/repos/NoteWorld/VimWiki/public/assets/e_step_2.svg" alt="Second iteration E-Step" style="transform: translate(12vw, 0)">
+<img src="https://albamr09.github.io/assets/e_step_2.svg" alt="Second iteration E-Step" style="transform: translate(12vw, 0)">
 </p>
 
 <p>
