--- a/src/Notes/DataScience/(DS0003)_Online_Training_Mobile_Robotics/OccpancyGridMaps/Occpancy Grid Maps.html
+++ b/src/Notes/DataScience/(DS0003)_Online_Training_Mobile_Robotics/OccpancyGridMaps/Occpancy Grid Maps.html
@@ -96,7 +96,7 @@ Feature Map representations store where on the environment certain points or lan
 
 </li></ul>
 <p>
-<img src="/home/alba/Documents/repos/NoteWorld/VimWiki/public/assets/feature_map.png" alt="Feature Map" style="transform:translate(30vw)">
+<img src="https://albamr09.github.io/assets/feature_map.png" alt="Feature Map" style="transform:translate(30vw)">
 </p>
 
 <ul>
@@ -105,7 +105,7 @@ Volumetric maps are most typically used to store free space.
 
 </li></ul>
 <p>
-<img src="/home/alba/Documents/repos/NoteWorld/VimWiki/public/assets/volumetric_map.png" alt="Volumetric Map" style="transform:translate(30vw)">
+<img src="https://albamr09.github.io/assets/volumetric_map.png" alt="Volumetric Map" style="transform:translate(30vw)">
 </p>
 
 <div id="Occupancy Grid Maps-Description of the Mapping Task"><h2 id="Description of the Mapping Task" class="header"><a href="#Occupancy Grid Maps-Description of the Mapping Task">Description of the Mapping Task</a></h2></div>
@@ -151,7 +151,7 @@ Every cell can be described with a binary random variable that models the occupa
 
 </li></ul>
 <p>
-<img src="/home/alba/Documents/repos/NoteWorld/VimWiki/public/assets/binary_random_variable_occupancy.png" alt="Binary Random Variable" style="transform:translate(30vw,0)">
+<img src="https://albamr09.github.io/assets/binary_random_variable_occupancy.png" alt="Binary Random Variable" style="transform:translate(30vw,0)">
 </p>
 
 <ul>
@@ -518,7 +518,7 @@ As we can see in the algorithm what we do is, given an observation \(z_t\) we go
 </p>
 
 <p>
-<img src="/home/alba/Documents/repos/NoteWorld/VimWiki/public/assets/occupancy_grid_cells_algorithm.png" alt="Occupancy Grid Cells Algorithm" style="transform:translate(25vw, 0)">
+<img src="https://albamr09.github.io/assets/occupancy_grid_cells_algorithm.png" alt="Occupancy Grid Cells Algorithm" style="transform:translate(25vw, 0)">
 </p>
 
 <div id="Occupancy Grid Maps-Inverse Sensor Model for Laser Range Finders"><h2 id="Inverse Sensor Model for Laser Range Finders" class="header"><a href="#Occupancy Grid Maps-Inverse Sensor Model for Laser Range Finders">Inverse Sensor Model for Laser Range Finders</a></h2></div>
@@ -528,7 +528,7 @@ On the following graph we show the way we update the occupancy probability of th
 </p>
 
 <p>
-<img src="/home/alba/Documents/repos/NoteWorld/VimWiki/public/assets/laser_sensor.png" alt="Sendor Information using a Laser Sensor" style="transform:translate(20vw,0)">
+<img src="https://albamr09.github.io/assets/laser_sensor.png" alt="Sendor Information using a Laser Sensor" style="transform:translate(20vw,0)">
 </p>
 
 <p>
@@ -551,7 +551,7 @@ A similar idea could be applied to Sonar Range Sensor, which measure an area ins
 </p>
 
 <p>
-<img src="/home/alba/Documents/repos/NoteWorld/VimWiki/public/assets/sonar_sensor.png" alt="Sonar Sensor" style="transform:translate(20vw,0)">
+<img src="https://albamr09.github.io/assets/sonar_sensor.png" alt="Sonar Sensor" style="transform:translate(20vw,0)">
 </p>
 
 <p>
@@ -559,7 +559,7 @@ However the graph is a bit different, we now take into account that the sensor m
 </p>
 
 <p>
-<img src="/home/alba/Documents/repos/NoteWorld/VimWiki/public/assets/sonar_sensor_probability.png" alt="Sonar Sensor Probability" style="transform:translate(20vw, 0)">
+<img src="https://albamr09.github.io/assets/sonar_sensor_probability.png" alt="Sonar Sensor Probability" style="transform:translate(20vw, 0)">
 </p>
 
 <div id="Occupancy Grid Maps-Example"><h2 id="Example" class="header"><a href="#Occupancy Grid Maps-Example">Example</a></h2></div>
@@ -569,7 +569,7 @@ The idea is to add sensor information to a current "map" to increase the certain
 </p>
 
 <p>
-<img src="/home/alba/Documents/repos/NoteWorld/VimWiki/public/assets/map_exmaple.png" alt="Map Example" style="transform:translate(20vw, 0)">
+<img src="https://albamr09.github.io/assets/map_exmaple.png" alt="Map Example" style="transform:translate(20vw, 0)">
 </p>
 </div>
   
