--- a/src/Notes/DataScience/GoogleDataAnalyst/01. Foundations/Optional: Exploring your next job.html
+++ b/src/Notes/DataScience/GoogleDataAnalyst/01. Foundations/Optional: Exploring your next job.html
@@ -41,7 +41,7 @@ Data analysts, data scientists, and data specialists sound very similar but focu
 </p>
 
 <p>
-<img src="/home/alba/Documents/repos/NoteWorld/VimWiki/public/assets/data-jobs.png" alt="Data Jobs" style="width:850px;height:600px;">
+<img src="https://albamr09.github.io/assets/data-jobs.png" alt="Data Jobs" style="width:850px;height:600px;">
 </p>
 </div>
   
