--- a/src/Notes/DataScience/GoogleDataAnalyst/01. Foundations/Outlining the data analysis.html
+++ b/src/Notes/DataScience/GoogleDataAnalyst/01. Foundations/Outlining the data analysis.html
@@ -42,7 +42,7 @@
 
 </li></ul>
 <p>
-<img src="/home/alba/Documents/repos/NoteWorld/VimWiki/public/assets/data-analysis-skills.png" alt="Data Analysis Skills" style="width:600px;height:600px;">
+<img src="https://albamr09.github.io/assets/data-analysis-skills.png" alt="Data Analysis Skills" style="width:600px;height:600px;">
 </p>
 </div>
   
