--- a/src/Notes/WebDev/Docker/compose.html
+++ b/src/Notes/WebDev/Docker/compose.html
@@ -45,7 +45,7 @@ It is used to set up a complex application running multiple services.
 </p>
 
 <p>
-<img src="/home/alba/Documents/repos/NoteWorld/VimWiki/public/assets/docker_compose.png" alt="Docker Compose" style="width:600px;height:400px;">
+<img src="https://albamr09.github.io/assets/docker_compose.png" alt="Docker Compose" style="width:600px;height:400px;">
 </p>
 
 <p>
