--- a/src/Notes/WebDev/NodeJS/http.html
+++ b/src/Notes/WebDev/NodeJS/http.html
@@ -47,7 +47,7 @@
 
 </li></ul>
 <p>
-<img src="/home/alba/Documents/repos/NoteWorld/VimWiki/public/assets/http_response_request.png">
+<img src="https://albamr09.github.io/assets/http_response_request.png">
 </p>
 
 <p>
