--- a/src/Notes/WebDev/Spring/AOP/Control Aspect Order.html
+++ b/src/Notes/WebDev/Spring/AOP/Control Aspect Order.html
@@ -59,7 +59,7 @@ We are going to create three aspects separate from each other as follows:
 </p>
 
 <p>
-<img src="/home/alba/Documents/repos/NoteWorld/VimWiki/public/assets/aspects.png" alt="Three Separate Aspects" style="width: 750px">
+<img src="https://albamr09.github.io/assets/aspects.png" alt="Three Separate Aspects" style="width: 750px">
 </p>
 
 <p>
@@ -67,7 +67,7 @@ So with the ordering the aspect flow looks something like this:
 </p>
 
 <p>
-<img src="/home/alba/Documents/repos/NoteWorld/VimWiki/public/assets/order_aspects.png" alt="Aspect Ordering" style="width: 750px">
+<img src="https://albamr09.github.io/assets/order_aspects.png" alt="Aspect Ordering" style="width: 750px">
 </p>
 
 <div id="Control Aspect Order-Refactor and Order-Log to Cloud Aspect"><h3 id="Log to Cloud Aspect" class="header"><a href="#Control Aspect Order-Refactor and Order-Log to Cloud Aspect">Log to Cloud Aspect</a></h3></div>
