--- a/src/Notes/WebDev/Spring/MVC/Form Validation.html
+++ b/src/Notes/WebDev/Spring/MVC/Form Validation.html
@@ -66,7 +66,7 @@ Some <code>Annotations</code> to perform the validation are the following:
 </p>
 
 <p>
-<img src="/home/alba/Documents/repos/NoteWorld/VimWiki/public/assets/validation_annotations.png" alt="Validation Annotations">
+<img src="https://albamr09.github.io/assets/validation_annotations.png" alt="Validation Annotations">
 </p>
 
 
