--- a/src/Notes/WebDev/Spring/Security/Cross Site Request Forgery.html
+++ b/src/Notes/WebDev/Spring/Security/Cross Site Request Forgery.html
@@ -69,7 +69,7 @@ When your <code>jsp</code> with the <code>&lt;form:form&gt;</code> tag is proces
 </p>
 
 <p>
-<img src="/home/alba/Documents/repos/NoteWorld/VimWiki/public/assets/see_csrf_token.png" alt="See CSRF token" style="width:750px">
+<img src="https://albamr09.github.io/assets/see_csrf_token.png" alt="See CSRF token" style="width:750px">
 </p>
 </div>
   
