--- a/src/Notes/DataScience/(DS0002)_AIRobotics/Search/Search.html
+++ b/src/Notes/DataScience/(DS0002)_AIRobotics/Search/Search.html
@@ -41,7 +41,7 @@ The process of finding a path from a starting point to the goal location is call
 </p>
 
 <p>
-<img src="https://albamr09.github.io/assets/planning.png" alt="Robot Motion Planning" style="transform: translate(50%, 0)">
+<img src="https://albamr09.github.io/public/assets/planning.png" alt="Robot Motion Planning" style="transform: translate(50%, 0)">
 </p>
 
 <p>
