--- a/src/Notes/WebDev/Spring/Hibernate/OneToOne.html
+++ b/src/Notes/WebDev/Spring/Hibernate/OneToOne.html
@@ -53,7 +53,7 @@ Here we demonstrate how to implement a unidirectional one to one relationship be
 </p>
 
 <p>
-<img src="https://albamr09.github.io/assets/uni_one_to_one.png" alt="Unidirectional One To One Relationship">
+<img src="https://albamr09.github.io/public/assets/uni_one_to_one.png" alt="Unidirectional One To One Relationship">
 </p>
 
 <p>
@@ -191,7 +191,7 @@ Now we will define the following Bidirectional One To One relationship:
 </p>
 
 <p>
-<img src="https://albamr09.github.io/assets/bi_one_to_one.png" alt="Bidirectional One To One Relationship">
+<img src="https://albamr09.github.io/public/assets/bi_one_to_one.png" alt="Bidirectional One To One Relationship">
 </p>
 
 <p>
