--- a/src/Notes/DataScience/GoogleDataAnalyst/02. Ask/Understand the power of data.html
+++ b/src/Notes/DataScience/GoogleDataAnalyst/02. Ask/Understand the power of data.html
@@ -57,7 +57,7 @@ Note that there is a difference between making a decision with incomplete data a
 
 </li></ul>
 <p>
-<img src="https://albamr09.github.io/assets/data-types.png" alt=" Qualitative and quantitative data" style="width:750px;height:500px">
+<img src="https://albamr09.github.io/public/assets/data-types.png" alt=" Qualitative and quantitative data" style="width:750px;height:500px">
 </p>
 </div>
   
