--- a/src/Notes/WebDev/Spring/Maven/Overview.html
+++ b/src/Notes/WebDev/Spring/Maven/Overview.html
@@ -62,7 +62,7 @@ Finally it uses the downloaded library to build and run the application
 
 </li></ol>
 <p>
-<img src="https://albamr09.github.io/assets/maven_flow.png" alt="Maven Behind the Scenes" style="width: 750px">
+<img src="https://albamr09.github.io/public/assets/maven_flow.png" alt="Maven Behind the Scenes" style="width: 750px">
 </p>
 
 <p>
@@ -73,7 +73,7 @@ Maven also downloads the libraries' dependencies. And when you build and run you
 <div id="Maven-Standard Directory Structure"><h2 id="Standard Directory Structure" class="header"><a href="#Maven-Standard Directory Structure">Standard Directory Structure</a></h2></div>
 
 <p>
-<img src="https://albamr09.github.io/assets/maven_standard_directory.png" alt="Standard Directory Structure" style="width:750px">
+<img src="https://albamr09.github.io/public/assets/maven_standard_directory.png" alt="Standard Directory Structure" style="width:750px">
 </p>
 </div>
   
